--- a/textlingo-desktop/src/locales/ja.json
+++ b/textlingo-desktop/src/locales/ja.json
@@ -65,8 +65,7 @@
     "segmentArticleHint": "「セグメント」ボタンをクリックして、記事を段落に分割して詳しく学習できます。",
     "analyzeAll": "すべて分析",
     "analyzeAllConfirm": "{{count}}個のセグメントを分析します。多くのトークンを消費する可能性があります。\n（3セグメントずつ並行処理）\n\n続行しますか？",
-    "allSegmentsAnalyzed": "すべてのセグメントは分析済みです。",
-    "selectToExplain": "「アシスタント」をクリックしてこのセグメントを分析します"
+    "allSegmentsAnalyzed": "すべてのセグメントは分析済みです。"
   },
   "newArticle": {
     "title": "新規記事",
@@ -138,6 +137,12 @@
       "openrouter": "OpenRouter",
       "deepseek": "DeepSeek",
       "google": "Google (Gemini)"
+    },
+    "theme": {
+      "light": "ライト",
+      "dark": "ダーク",
+      "system": "システム",
+      "eyeProtection": "アイプロテクション"
     },
     "models": {
       "openai": {
