--- a/textlingo-desktop/src/locales/zh.json
+++ b/textlingo-desktop/src/locales/zh.json
@@ -277,6 +277,7 @@
     "extracting": "正在提取字幕...",
     "success": "字幕提取成功！",
     "error": "字幕提取失败",
-    "geminiRequired": "字幕提取需要使用 Gemini 模型（gemini-2.0-flash 或更新版本），请在设置中配置。"
+    "geminiRequired": "字幕提取需要使用 Gemini 模型（gemini-2.0-flash 或更新版本），请在设置中配置。",
+    "reExtract": "重新提取"
   }
 }
