--- a/textlingo-desktop/src/locales/en.json
+++ b/textlingo-desktop/src/locales/en.json
@@ -8,7 +8,8 @@
   },
   "common": {
     "refresh": "Refresh",
-    "close": "Close"
+    "close": "Close",
+    "cancel": "Cancel"
   },
   "header": {
     "configureApiKey": "Configure your API key to get started",
@@ -299,7 +300,7 @@
     "extracting": "Extracting subtitles...",
     "success": "Subtitles extracted successfully!",
     "error": "Failed to extract subtitles",
-    "geminiRequired": "Subtitle extraction requires a Gemini model (gemini-2.0-flash or newer). Please configure in Settings.",
+    "geminiRequired": "Subtitle extraction requires a Gemini model. We recommend Gemini 3.0 Flash for short videos and Gemini 3.0 Pro for long videos. Please configure in Settings.",
     "reExtract": "Re-extract"
   }
 }
