--- a/textlingo-desktop/src/locales/ja.json
+++ b/textlingo-desktop/src/locales/ja.json
@@ -1,9 +1,8 @@
 {
   "app": {
-    "title": "TextLingo デスクトップ",
-    "subtitle": "AI搭載記事リーダー",
-    "version": "v0.1.0",
-    "loading": "TextLingoを読み込み中...",
+    "title": "OpenKoto",
+    "subtitle": "クロスランゲージ読解・再生・学習ツール",
+    "loading": "OpenKotoを読み込み中...",
     "notConfigured": "未設定"
   },
   "common": {
@@ -19,7 +18,8 @@
   },
   "footer": {
     "provider": "プロバイダー",
-    "model": "モデル"
+    "model": "モデル",
+    "quickSwitch": "クイック切替"
   },
   "articleList": {
     "title": "マイ記事",
@@ -160,8 +160,15 @@
       "siliconflow": "SiliconFlow",
       "302ai": "302.AI",
       "google": "Google (Vertex AI)",
-      "google-ai-studio": "Google AI Studio (無料)"
+      "google-ai-studio": "Google AI Studio (無料)",
+      "openai-compatible": "OpenAI互換",
+      "ollama": "Ollama (ローカル)",
+      "lmstudio": "LM Studio (ローカル)"
     },
+    "baseUrl": "ベースURL",
+    "baseUrlPlaceholder": "https://your-api-endpoint.com/v1",
+    "baseUrlHelp": "APIエンドポイントURLを入力 (例: http://localhost:11434/v1)",
+    "apiKeyOptional": "APIキー (オプション)",
     "theme": {
       "light": "ライト",
       "dark": "ダーク",
